--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <html>
+  <head>
+    <link rel="shortcut icon" src="<!--Type filename of he logo here-->">
+    <link rel="stylesheet" src="styles.css">
+    <title>Starbucks Coding</title>
+  </head>
+  
+ <body>
+   <h1> What is Starbucks Coding?</h1>
+</body>
+
+      
