--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="shortcut icon" src="<!--Type filename of he logo here-->">
+    <link rel="shortcut icon" src="https://raw.githubusercontent.com/starbucks-coding/MAIN/master/Screenshot%202019-12-16%20at%202.08.41%20PM.png">
     <link rel="stylesheet" src="styles.css">
     <title>Starbucks Coding</title>
   </head>
