--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Starbucks Coding</title>
   </head>
   
- <body>
+ <body class="parralax">
    <h1> What is Starbucks Coding?</h1>
 </body>
 
