--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html>
   <head>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/starbucks-coding/MAIN/master/Screenshot%202019-12-16%20at%202.08.41%20PM.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="bg.css">
     <title>Starbucks Coding</title>
   </head>
   
  <body class="parralax">
-   <h1> What is Starbucks Coding?</h1>
+ <main>
+  <div class="background"></div>
+  <div class="foreground"></div>
+</main>
 </body>
+  <script src="bg.js"></script>
 
       
