--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/starbucks-coding/MAIN/master/Screenshot%202019-12-16%20at%202.08.41%20PM.png">
-    <link rel="stylesheet" href="bg.css">
+    <link rel="stylesheet" src="bg.css">
     <title>Starbucks Coding</title>
   </head>
   
